--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
   <head>
     <style>
         #main {
-        text-align: center;
         font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        padding: 10px;
+        padding: 5px;
+        display: inline;
         }
         .list {
           margin: 5px;
           border: 1px solid rgb(204, 204, 204);
           border-radius: 3px;
           display: inline-block;
-          max-height: 450px;
-          width: auto;
+          width: 250px;
+          vertical-align: top;
           padding: 4px 4px 0px;
           background-color: rgb(226, 228, 230);
         }
@@ -41,7 +41,8 @@
         .card-list {
           overflow-y: auto;
           overflow-x: visible;
-          max-height: 410px;
+          height: auto;
+          width: 100%;
         }
         .card {
           overflow: auto;
@@ -55,8 +56,7 @@
           line-height: 18px;
           border: 1px solid rgb(204, 204, 204);
           border-radius: 4px;
-          width: auto;
-          max-width: 220px;
+          width: 100%;
           text-align: left;
           background-color: rgb(255, 255, 255);
         }
@@ -77,11 +77,38 @@
 <div id="main">
   <div class="list">
     <div class="list-header">
-      <h2 class="list-title">Backlog</h2>
+      <h2 class="list-title">Done</h2>
+    </div>
+    <div class="card-list">
+      <div class="card"> <a href="" target="_blank" class="card-title">Graduate from school Carmen Arriola de Marin with title of "Bachillerato en Produccion de Bienes y Servicios</a>
       </div>
-      <div class="card-list">
-        <div class="card"> <a href="" target="_blank" class="card-title">Speak Japanesse fluently</a>
-        </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Play basketball 15 years</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Know Europe</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Play the guitar</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Home tutor (2009 - 2014)</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Internship at Febicom SA (2011-2011)</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Assistant professor at "Algoritmos y Programacion II" in Universidad de Buenos Aires (2013-2014)</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Senior Android Developer at 
+      Amalgama Software SRL (2014-2016)</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="list">
+    <div class="list-header">
+      <h2 class="list-title">Backlog</h2>
+    </div>
+    <div class="card-list">
+      <div class="card"> <a href="" target="_blank" class="card-title">Speak Japanesse fluently</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">LEARN MOREEEEEEE</a>
+      </div>
       <div class="card"> <a href="" target="_blank" class="card-title">Count the stars</a>
       </div>
       <div class="card"> <a href="" target="_blank" class="card-title">Watch LOTR 100 times</a>
@@ -90,8 +117,57 @@
       </div>
       <div class="card"> <a href="" target="_blank" class="card-title">Sleep</a>
       </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Dont suck at frontend web</a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">Learn backbone</a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Buy a house
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="list">
+    <div class="list-header">
+      <h2 class="list-title">Current Sprint</h2>
+    </div>
+    <div class="card-list">
+      <div class="card"> 
+        <a href="" target="_blank" class="card-title">Working as Software Engineer at MercadoLibre
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Graduate as Informatic Engineer at Universidad de Buenos Aires
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Read (practicing it) Genki I and II
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Learn backend on Rails
+        </a>
+      </div>
+      <div class="card"> <a href="" target="_blank" class="card-title">More java (never is enough)</a>
+      </div>
     </div>
   </div>
 </div>
+
+<div class="list">
+    <div class="list-header">
+      <h2 class="list-title">On hold</h2>
+    </div>
+    <div class="card-list">
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Play the guitar better
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
