--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         #main {
         font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
         padding: 5px;
-        display: inline;
         }
         .list {
           margin: 5px;
@@ -99,7 +98,122 @@
       </div>
     </div>
   </div>
-
+  <div class="list">
+    <div class="list-header">
+      <h2 class="list-title">Works</h2>
+    </div>
+    <div class="card-list">
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - MercadoLibre's frontends and backends - MercadoLibre
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Custom keyboard for Disney - Stickies
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Social network for parties - Previando
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Argentina's national weather forecast - SMN
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Library for event oriented programming
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Library for networking event oriented handling known framework problems. Wraps OkHttp
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Library for resources on demand - Pomu
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - IA for Client Automation - AgentBot
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C++ - Megaman 3 Multiplayer
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Latinoamerica music news social network - Ibermusicas
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - CitiBank buying with authorization - CitiConfirm
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Java - Carmen San Diego Game
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C - Rsync algorythm - Rsync
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Bussiness helper for easier managing - Bincrease
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C++ - KNN Follow leader pattern for predicting crimes in San Francisco
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Sport social network - SoyDeporte
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C++ - Lisp interpreter
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Milwaukee neighbourhood social network - Dispatch
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C++ - map reduce for getting stats about weather
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Tracking and management of proyects - TMP
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Offers and discounts by doing polls - DeArriba!
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Trip destiny notifier for busy people - Break
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Open source reddit client - Redgram
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Argentina's national agricultural weather forecast - SMN Agro
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Argentina's naval forecast - SHN
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - Argentina's maps - IGN
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Android - App for advertisement for a brand bussiness - Primo
+        </a>
+      </div>
+    </div>
+  </div>
+  </div>
   <div class="list">
     <div class="list-header">
       <h2 class="list-title">Backlog</h2>
@@ -149,12 +263,11 @@
         <a href="" target="_blank" class="card-title">Learn backend on Rails
         </a>
       </div>
-      <div class="card"> <a href="" target="_blank" class="card-title">More java (never is enough)</a>
+      <div class="card"> <a href="" target="_blank" class="card-title">More java (never is enough!)</a>
       </div>
     </div>
   </div>
 </div>
-
 <div class="list">
     <div class="list-header">
       <h2 class="list-title">On hold</h2>
