--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class="card"> <a href="" target="_blank" class="card-title">Play the guitar</a>
       </div>
-      <div class="card"> <a href="" target="_blank" class="card-title">Home tutor (2009 - 2014)</a>
+      <div class="card"> <a href="" target="_blank" class="card-title">Tutor (2009 - 2014)</a>
       </div>
       <div class="card"> <a href="" target="_blank" class="card-title">Internship at Febicom SA (2011-2011)</a>
       </div>
@@ -241,7 +241,6 @@
       </div>
     </div>
   </div>
-
   <div class="list">
     <div class="list-header">
       <h2 class="list-title">Current Sprint</h2>
@@ -280,7 +279,162 @@
     </div>
   </div>
 </div>
-
+<div class="list">
+    <div class="list-header">
+      <h2 class="list-title">Skills</h2>
+    </div>
+    <div class="card-list">
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Object oriented programming
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Event oriented programming
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Functional programming
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Reactive programming
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Daily Java - Android developer (since 2008 java / 2012 android)
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Secretly in love with C++ and Kotlin
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Self-learner
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Way too perfectionist in performance / security.
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Vim + Tmux = Godlike Combo
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">GDB / GCC / Valgrind / Cachegrind
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">GNOME dude. I still dont understand how people can use Unity distro's
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Bash
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">HTML / JSON / XML / Protobuf
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">All day book reader
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Agile / Scrum performer
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Python / Smalltalk / Apache PIG / Apache Spark / R / Turtle / AspectJ
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">TDD / XP (Although I dont practice it often in my works)
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Believer of the SOLID principle
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Party hard
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM still work depending the case.
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Flux / Redux patterns
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Try out new out of the box patterns / tools
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Databinding
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Remembering how java 6 life was like
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Http internals / TLS Handshakes (Http/2 ALPN too) / Certificates / Gzip, HPACK compressions / RESTful services 
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Bytecode manipulation / Dexing / Hotcoding
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Cooking
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Star and test every github repo that seems cool
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Immutable > Mutable objects
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">C / Assembly / Pascal
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">JUnit + Robolectric + Mockito = Love (although im complaining once a week about a bug with gsm)
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">SQL / HQL - ORMs
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Ride a bike
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Big Data: Clustering / Hashing / Map-Reduce / Compression / Social Networks / Neural networks / Prediction kernels
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Kotlin / Grails / Ruby 
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">RESTful services with Rails
+        </a>
+      </div>
+      <div class="card">
+        <a href="" target="_blank" class="card-title">Git
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
