--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
     <style>
         #main {
           font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
-          background-color: rgb(255, 185, 100);
-
-          width: 100%;
-          height: 100%;
         }
         .container {
-          display: inline;
-          overflow-x: scroll;
+          display: inline-block;
           overflow-y: hidden;
+          background-color: rgb(255, 185, 100);
+          width: 100%;
+          height: 100%;
         }
         .list {
           margin: 5px;
           border: 1px solid rgb(204, 204, 204);
           border-radius: 3px;
-          margin-bottom: 20px;
           display: inline-block;
           white-space: normal;
           width: 250px;
@@ -47,9 +44,11 @@
           overflow: hidden;
           text-overflow: ellipsis;
           word-wrap: break-word;
+          position: relative;
           color: rgb(77, 77, 77);
         }
         .card-list {
+          position: relative;
           overflow-y: scroll;
           overflow-x: hidden;
           height: auto;
