--- a/index.html
+++ b/index.html
@@ -1,89 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <style>
-        #main {
-          font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        }
-        .container {
-          display: inline-block;
-          overflow-y: hidden;
-          background-color: rgb(255, 185, 100);
-          width: 100%;
-          height: 100%;
-        }
-        .list {
-          margin: 5px;
-          border: 1px solid rgb(204, 204, 204);
-          border-radius: 3px;
-          display: inline-block;
-          white-space: normal;
-          width: 250px;
-          max-height: 100%;
-          vertical-align: top;
-          padding: 4px 4px 0px;
-          background-color: rgb(226, 228, 230);
-          float: left;
-        }
-        .list-header {
-          padding: 8px 4px;
-          position: relative;
-          min-height: 19px;
-          display: block;
-          line-height: 18px;
-          text-align: left;
-        }
-        .list-title {
-          cursor: pointer;
-          display: inline;
-          font-size: 15px;
-          font-weight: bold;
-          line-height: 18px;
-          margin: 0px;
-          min-height: 19px;
-          min-width: 30px;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          word-wrap: break-word;
-          position: relative;
-          color: rgb(77, 77, 77);
-        }
-        .card-list {
-          position: relative;
-          overflow-y: scroll;
-          overflow-x: hidden;
-          height: auto;
-          width: 100%;
-        }
-        .card {
-          overflow: auto;
-          padding: 6px 8px 4px;
-          margin-bottom: 4px;
-          position: relative;
-          display: block;
-          cursor: pointer;
-          color: rgb(77, 77, 77);
-          font-size: 14px;
-          line-height: 18px;
-          border: 1px solid rgb(204, 204, 204);
-          border-radius: 4px;
-          width: 240px;
-          text-align: left;
-          background-color: rgb(255, 255, 255);
-        }
-        .card-title {
-          color: rgb(77, 77, 77);
-          clear: both;
-          display: block;
-          font-weight: 400;
-          margin: 0px 0px 4px;
-          overflow: hidden;
-          text-decoration: none;
-          word-wrap: break-word;
-          background-color: transparent;
-        }
-    </style>
-  </head>
-
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="home_styles.css" />
+    <title> CV </title>
+</head>
+ 
+<body>
 <div id="main">
   <div class="container">
     <div class="list">
@@ -105,7 +28,7 @@
         </div>
         <div class="card"> <a href="" target="_blank" class="card-title">Assistant professor at "Algoritmos y Programacion II" in Universidad de Buenos Aires (2013-2014)</a>
         </div>
-        <div class="card"> <a href="" target="_blank" class="card-title">Senior Android Developer at 
+        <div class="card"> <a href="" target="_blank" class="card-title">Senior Android Developer at
         Amalgama Software SRL (2014-2016)</a>
         </div>
       </div>
@@ -222,7 +145,7 @@
         <div class="card">
           <a href="" target="_blank" class="card-title">Android - App for advertisement for a brand bussiness - Primo
           </a>
-        </div>
+          </div>
       </div>
     </div>
     </div>
@@ -258,7 +181,7 @@
         <h2 class="list-title">Current Sprint</h2>
       </div>
       <div class="card-list">
-        <div class="card"> 
+        <div class="card">
           <a href="" target="_blank" class="card-title">Working as Software Engineer at MercadoLibre
           </a>
         </div>
@@ -287,167 +210,167 @@
         <div class="card">
           <a href="" target="_blank" class="card-title">Play the guitar better
           </a>
+ 
+        </div>
         </div>
       </div>
     </div>
   </div>
   <div class="list">
-      <div class="list-header">
-        <h2 class="list-title">Skills</h2>
-      </div>
-      <div class="card-list">
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Object oriented programming
-          </a>
+        <div class="list-header">
+          <h2 class="list-title">Skills</h2>
         </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Event oriented programming
-          </a>
+        <div class="card-list">
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Object oriented programming
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Event oriented programming
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Functional programming
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Reactive programming
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Daily Java - Android developer (since 2008 java / 2012 android)
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Secretly in love with C++ and Kotlin
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Self-learner
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Way too perfectionist in performance / security.
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Vim + Tmux = Godlike Combo
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">GDB / GCC / Valgrind / Cachegrind
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">GNOME dude. I still dont understand how people can use Unity distro's
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Bash
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">HTML / JSON / XML / Protobuf
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">All day book reader
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Agile / Scrum performer
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Python / Smalltalk / Apache PIG / Apache Spark / R / Turtle / AspectJ
+            </a>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">TDD / XP (Although I dont practice it often in my works)
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Believer of the SOLID principle
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Party hard
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM still work depending the case.
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Flux / Redux patterns
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Try out new out of the box patterns / tools
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Databinding
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Remembering how java 6 life was like
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Http internals / TLS Handshakes (Http/2 ALPN too) / Certificates / Gzip, HPACK compressions / RESTful services
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Bytecode manipulation / Dexing / Hotcoding
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Cooking
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Star and test every github repo that seems cool
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Immutable > Mutable objects
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">C / Assembly / Pascal
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">JUnit + Robolectric + Mockito = Love (although im complaining once a week about a bug with gsm)
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">SQL / HQL - ORMs
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Ride a bike
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Big Data: Clustering / Hashing / Map-Reduce / Compression / Social Networks / Neural networks / Prediction kernels
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Kotlin / Grails / Ruby
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">RESTful services with Rails
+            </a>
+          </div>
+          <div class="card">
+            <a href="" target="_blank" class="card-title">Git
+            </a>
+          </div>
         </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Functional programming
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Reactive programming
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Daily Java - Android developer (since 2008 java / 2012 android)
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Secretly in love with C++ and Kotlin
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Self-learner
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Way too perfectionist in performance / security.
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Vim + Tmux = Godlike Combo
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">GDB / GCC / Valgrind / Cachegrind
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">GNOME dude. I still dont understand how people can use Unity distro's
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Bash
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">HTML / JSON / XML / Protobuf
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">All day book reader
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Agile / Scrum performer
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Python / Smalltalk / Apache PIG / Apache Spark / R / Turtle / AspectJ
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">TDD / XP (Although I dont practice it often in my works)
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Believer of the SOLID principle
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Party hard
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM still work depending the case.
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Flux / Redux patterns
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Try out new out of the box patterns / tools
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Databinding
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Remembering how java 6 life was like
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Http internals / TLS Handshakes (Http/2 ALPN too) / Certificates / Gzip, HPACK compressions / RESTful services 
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Bytecode manipulation / Dexing / Hotcoding
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Cooking
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Star and test every github repo that seems cool
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Immutable > Mutable objects
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">C / Assembly / Pascal
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">JUnit + Robolectric + Mockito = Love (although im complaining once a week about a bug with gsm)
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">SQL / HQL - ORMs
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Ride a bike
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Big Data: Clustering / Hashing / Map-Reduce / Compression / Social Networks / Neural networks / Prediction kernels
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Kotlin / Grails / Ruby 
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">RESTful services with Rails
-          </a>
-        </div>
-        <div class="card">
-          <a href="" target="_blank" class="card-title">Git
-          </a>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
-
+ 
 </body>
 </html>
