--- a/index.html
+++ b/index.html
@@ -155,8 +155,6 @@
           <div class="card-list">
             <div class="card"> <a href="" target="_blank" class="card-title">Speak Japanesse fluently</a>
             </div>
-            <div class="card"> <a href="" target="_blank" class="card-title">LEARN MOREEEEEEE</a>
-            </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Count the stars</a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Watch LOTR 100 times</a>
@@ -189,6 +187,10 @@
               </a>
             </div>
             <div class="card">
+              <a href="" target="_blank" class="card-title">Learn new cool stuff
+              </a>
+            </div>
+            <div class="card">
               <a href="" target="_blank" class="card-title">Read (practicing it) Genki I and II
               </a>
             </div>
@@ -207,6 +209,10 @@
           <div class="card-list">
             <div class="card">
               <a href="" target="_blank" class="card-title">Play the guitar better
+              </a>
+            </div>
+            <div class="card">
+              <a href="" target="_blank" class="card-title">Snowboard
               </a>
             </div>
           </div>
@@ -329,7 +335,7 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">Immutable > Mutable objects
+                <a href="" target="_blank" class="card-title">Immutable objects and builder/factory pattern forever
                 </a>
               </div>
               <div class="card">
