Custom image for header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
  
   <body>
     <div id="main">
+      <div class="header">
+        <img class="profile_thumbnail" src="my_thumbnail.jpg" alt="my_thumbnail"/>
+      </div>
+
+
       <div class="container">
         <div class="list">
           <div class="list-header">
