--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" type="text/css" href="home_styles.css" />
       <link rel="icon" href="/icons/favicon.ico"/>
       <link rel="shortcut icon" href="/icons/favicon.ico"/>
-      <title> CV </title>
+      <title>Join the Empire</title>
   </head>
  
   <body>
