--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   <body>
     <div id="main">
       <div class="header">
-        <img class="profile_thumbnail" src="my_thumbnail.jpg" alt="my_thumbnail"/>
+        <img class="profile-thumbnail" src="my_thumbnail.jpg" alt="my_thumbnail"/>
+        <div class="header-information">
+          <h1 class="header-title"> Hola </h1>
+        </div>
       </div>
 
 
-      <div class="container">
+      <div class="list-container">
         <div class="list">
           <div class="list-header">
             <h2 class="list-title">Done</h2>
