--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="header">
         <img class="profile-thumbnail" src="my_thumbnail.jpg" alt="my_thumbnail"/>
         <div class="header-information">
-          <h1 class="header-title"> Hola </h1>
+          <h1 class="header-title">Santiago Aguilera</h1>
+          <h3 class="header-description">23 year-old. Buenos Aires, Argentina.</h3>
+          <h5 class="header-description">Informatic engineer student. Mercadolibre software engineer employee. Guitar, basketball, clothes, coding maniac. Daily self-learner.</h5>
         </div>
       </div>
 
@@ -45,7 +47,7 @@
         </div>
         <div class="list">
           <div class="list-header">
-            <h2 class="list-title">Works</h2>
+            <h2 class="list-title">Accomplishments</h2>
           </div>
           <div class="card-list">
             <div class="card">
@@ -165,8 +167,6 @@
           <div class="card-list">
             <div class="card"> <a href="" target="_blank" class="card-title">Speak Japanesse fluently</a>
             </div>
-            <div class="card"> <a href="" target="_blank" class="card-title">Count the stars</a>
-            </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Watch LOTR 100 times</a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Trip to Sweden</a>
@@ -174,8 +174,6 @@
             <div class="card"> <a href="" target="_blank" class="card-title">Sleep</a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Dont suck at frontend web</a>
-            </div>
-            <div class="card"> <a href="" target="_blank" class="card-title">Learn backbone</a>
             </div>
             <div class="card">
               <a href="" target="_blank" class="card-title">Buy a house
@@ -205,10 +203,10 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Learn backend on Rails
+              <a href="" target="_blank" class="card-title">Improve more at Rails
               </a>
             </div>
-            <div class="card"> <a href="" target="_blank" class="card-title">More java (never is enough!)</a>
+            <div class="card"> <a href="" target="_blank" class="card-title">More java and android (never is enough!)</a>
             </div>
           </div>
         </div>
@@ -254,10 +252,6 @@
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">Secretly in love with C++ and Kotlin
-                </a>
-              </div>
-              <div class="card">
-                <a href="" target="_blank" class="card-title">Self-learner
                 </a>
               </div>
               <div class="card">
@@ -309,7 +303,23 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM still work depending the case.
+                <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM / among others
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">SDL / Qt / Cairo / Gtk
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Concurrency perfectionist (threading / pthreads / locks / conditions / futures / starvation / deadlocks / double check if / blablabla)
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Cookies
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Sockets
                 </a>
               </div>
               <div class="card">
@@ -326,6 +336,10 @@
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">Remembering how java 6 life was like
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Cache
                 </a>
               </div>
               <div class="card">
@@ -349,7 +363,7 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">C / Assembly / Pascal
+                <a href="" target="_blank" class="card-title">C / Assembly
                 </a>
               </div>
               <div class="card">
