Contact me links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
           <h3 class="header-description">23 year-old. Buenos Aires, Argentina.</h3>
           <h5 class="header-description">FIUBA Informatic engineer student. Mercadolibre software engineer employee. Guitar, basketball, clothes, coding maniac. Daily self-learner.</h5>
         </div>
+
+        <div class="header-contact-container">
+          <div class="header-contact">
+            <img class="header-contact-image" src="my_thumbnail.jpg" alt="github"/>
+            <span class="header-contact-name">Github</span>
+          </div>
+          <div class="header-contact">
+            <img class="header-contact-image" src="my_thumbnail.jpg" alt="githusb"/>
+            <span class="header-contact-name">LinkedIn</span>
+          </div>
+          <div>
+            <img class="header-contact-image" src="my_thumbnail.jpg" alt="githubd"/>
+            <span class="header-contact-name">Mail me!</span>
+          </div>
+        </div>
       </div>
 
 
