--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
         </div>
 
         <div class="header-contact-container">
+          <a href="https://www.github.com/saantiaguilera">
+            <div class="header-contact">
+              <img class="header-contact-image" src="icons/github.png" alt="github"/>
+              <span class="header-contact-name">Github</span>
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/in/santiago-aguilera-55202255">
           <div class="header-contact">
-            <img class="header-contact-image" src="my_thumbnail.jpg" alt="github"/>
-            <span class="header-contact-name">Github</span>
-          </div>
-          <div class="header-contact">
-            <img class="header-contact-image" src="my_thumbnail.jpg" alt="githusb"/>
+            <img class="header-contact-image" src="icons/linkedin.png" alt="githusb"/>
             <span class="header-contact-name">LinkedIn</span>
           </div>
+          </a>
+          <a href="mailto:marquito.santi@gmail.com?Subject=Hire%20Me!">
           <div>
-            <img class="header-contact-image" src="my_thumbnail.jpg" alt="githubd"/>
+            <img class="header-contact-image" src="icons/gmail.png" alt="githubd"/>
             <span class="header-contact-name">Mail me!</span>
           </div>
+          </a>
         </div>
       </div>
 
