--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="home_styles.css" />
+      <link rel="stylesheet" type="text/css" href="index.css" />
       <link rel="icon" href="/icons/favicon.ico"/>
       <link rel="shortcut icon" href="/icons/favicon.ico"/>
       <title>Join the Empire</title>
   </head>
- 
+
   <body>
     <div id="main">
       <div class="header">
-        <img class="profile-thumbnail" src="my_thumbnail.jpg" alt="my_thumbnail"/>
+        <img class="profile-thumbnail" src="icons/my_thumbnail.jpg" alt="my_thumbnail"/>
         <div class="header-information">
           <h1 class="header-title">Santiago Aguilera</h1>
           <h3 class="header-description">23 year-old. Buenos Aires, Argentina.</h3>
