Mailto content changed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="header-contact-name">LinkedIn</span>
           </div>
           </a>
-          <a href="mailto:marquito.santi@gmail.com?Subject=Hire%20Me!">
+          <a href="mailto:marquito.santi@gmail.com?Subject=Job%20offer">
           <div>
             <img class="header-contact-image" src="icons/gmail.png" alt="githubd"/>
             <span class="header-contact-name">Mail me!</span>
