--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Android - Library for networking event oriented handling known framework problems. Wraps OkHttp
+              <a href="" target="_blank" class="card-title">Android - Library for networking requests. Event oriented, handling known framework problems. Wraps OkHttp
               </a>
             </div>
             <div class="card">
@@ -112,7 +112,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Android - Latinoamerica music news social network - Ibermusicas
+              <a href="" target="_blank" class="card-title">Android - Latinamerica music news social network - Ibermusicas
               </a>
             </div>
             <div class="card">
@@ -148,7 +148,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">C++ - map reduce for getting stats about weather
+              <a href="" target="_blank" class="card-title">C++ - Map reduce for getting stats about weather
               </a>
             </div>
             <div class="card">
