--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="shortcut icon" href="/icons/favicon.ico"/>
       <title>Join the Empire</title>
   </head>
- 
+  <script src="index.js"></script>
   <body>
     <div id="main">
       <div class="header">
