--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Html & Css - This page :)
+              <a href="" target="_blank" class="card-title">Html & Css & Javascript - This page :)
               </a>
             </div>
             <div class="card">
@@ -418,6 +418,14 @@
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">SQL / HQL - ORMs
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Html / Css / Javascript
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">ADB / Profiler / Android platform tools
                 </a>
               </div>
               <div class="card">
