Update some info

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Learn Angular js / Get better at front end web
+              <a href="" target="_blank" class="card-title">Learn Angular 2 / Get better at front end web
               </a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">More java and android (never is enough!)</a>
@@ -306,6 +306,10 @@
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">Bash
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Javassist / ASM / Xposed
                 </a>
               </div>
               <div class="card">
@@ -389,7 +393,11 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">Http internals / TLS Handshakes (Http/2 ALPN too) / Certificates / Gzip, HPACK compressions / RESTful services
+                <a href="" target="_blank" class="card-title">Http / RESTful services
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">TLS Handshakes (ALPN, NPN) / Certificates / Gzip, HPACK compressions / etc
                 </a>
               </div>
               <div class="card">
@@ -397,7 +405,7 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">Cooking
+                <a href="" target="_blank" class="card-title">Cooking (Eg: Pastas or barbecue)
                 </a>
               </div>
               <div class="card">
